# miomail

./: .gitignore  .mcp.json  LICENSE  README.md  package.json  plan.md  tailwind.config.ts  tsconfig.json  vite.config.ts
.claude/: launch.json
docs/: MCP.md  RELEASE.md
docs/character-mods/: MOD_FOLDER_README.txt  README.md  character.schema.json
docs/character-mods/examples/: blender-glb.example.json  image-sequence.example.json  sprite-sheet.example.json
scripts/: extract_outlook.py  make-latest-json.mjs
site/: index.html  mcp.html  mods.html  vite.config.ts  wrangler.jsonc
site/src/: McpGuide.tsx  MioMailSite.tsx  ModsGuide.tsx  links.ts  main.tsx  mcp.tsx  mcpSetup.tsx  mods.tsx  site.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: fetch-ort-dll.ps1
src-tauri/src/: backfill.rs  credentials.rs  db.rs  embed.rs  imap_service.rs  lib.rs  main.rs  outlook_import.rs  smtp_service.rs  test_imap.rs  tray.rs  utf7.rs  vectorize.rs
src-tauri/src/commands/: account.rs  app.rs  attachment.rs  build.rs  character_mod.rs  import.rs  mail.rs  mod.rs  system.rs  update.rs
src/renderer/: App.tsx  index.html  version.ts
src/renderer/characters/: types.ts
src/renderer/components/account/: AccountManager.tsx  AccountSetup.tsx
src/renderer/components/characters/: GltfModMascot.tsx  MascotRenderer.tsx  ModThumbnail.tsx  SpriteModMascot.tsx
src/renderer/components/compose/: ComposePanel.tsx
src/renderer/components/import/: ImportDialog.tsx
src/renderer/components/layout/: CompanionOverlay.tsx  CourierCompanionDock.tsx  CourierDeliveryOverlay.tsx  CourierMascot.tsx  CourierMascot3D.tsx  CourierWelcome.tsx  EvolutionCelebrationOverlay.tsx  JobProgressBar.tsx  MessageList.tsx  MessageView.tsx  Sidebar.tsx  TitleBar.tsx  UpdateBanner.tsx
src/renderer/components/onboarding/: WelcomeOnboarding.tsx
src/renderer/components/settings/: SettingsModal.tsx  SystemSection.tsx  ThemePreview.tsx
src/renderer/data/: mascotIdleMotions.ts  mascots.ts  themes.ts
src/renderer/lib/: characterMods.ts  companionPosition.ts  folderTree.ts  format.ts  ipc.ts  mockApi.ts  onboarding.ts  theme.ts
src/renderer/stores/: characterStore.ts  mailStore.ts  mascotStore.ts  uiStore.ts
src/renderer/styles/: globals.css
src/renderer/types/: index.ts
