[package]
name = "miomail"
version = "2.1.7"
edition = "2021"
homepage = "https://miomail.app/"
repository = "https://github.com/firemio/miomail"

[lib]
name = "miomail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "miomail"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
async-imap = "0.10"
async-native-tls = "0.5"
async-std = "1"
futures = "0.3"
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "builder", "smtp-transport"] }
mail-parser = "0.9"
base64 = "0.22"
keyring = { version = "3", features = ["windows-native"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
once_cell = "1"
# CPU 名の取得(mail_system_info 用。x86/x86_64 のみ有効、他アーチは "不明")
raw-cpuid = "11"
# --- セマンティック検索(embed.rs / vectorize.rs)用 ---
# ort: ONNX Runtime バインディング。`load-dynamic` で onnxruntime.dll を
# 実行時ロードするため、リンク時に DLL は不要(配布はアプリ同梱 or 開発時 DL)。
# 開発環境では `ORT_STRATEGY=download`(既定)でビルド時に onnxruntime バイナリを
# 取得し、`copy-dylibs` が target/ 配下の exe 横に DLL をコピーする。
# protoc は不要(プリビルトバイナリ方式のため)。
ort = { version = "=2.0.0-rc.11", default-features = false, features = [
    "load-dynamic",
    "download-binaries",
    "copy-dylibs",
    "tls-native",
    "ndarray",
] }
# トークナイザ(tokenizer.json をローカル読み込み。http 機能は不要)
tokenizers = { version = "=0.23.1", default-features = false, features = ["fancy-regex"] }
# モデルの初回ダウンロード(進捗コールバック付き。HF からの受信のみ)
hf-hub = "=1.0.0"

[features]
default = []
# NPU 向け EP(OpenVINO / Vitis)は opt-in。有効時のみ embed.rs が
# NPU 系 EP を優先チェーンの先頭に登録する(既定は DirectML > CPU)。
npu = ["ort/openvino", "ort/vitis"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
