[package]
name = "miomail"
version = "2.1.9"
edition = "2021"
homepage = "https://miomail.app/"
repository = "https://github.com/firemio/miomail"

[lib]
name = "miomail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "miomail"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
async-imap = "0.10"
async-native-tls = "0.5"
async-std = "1"
futures = "0.3"
lettre = { version = "0.11", default-features = false, features = ["tokio1-native-tls", "builder", "smtp-transport"] }
mail-parser = "0.9"
base64 = "0.22"
keyring = { version = "3", features = ["windows-native"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
once_cell = "1"
# CPU 名の取得(mail_system_info 用。x86/x86_64 のみ有効、他アーチは "不明")
raw-cpuid = "11"
# --- セマンティック検索(embed.rs / vectorize.rs)用 ---
# Windows ML (WinML) API。ONNX Runtime (ort) の代わりに Windows 組み込みの
# AI/ML 推論エンジンを使用。Windows 10 1903+ / Windows 11 で動作。
windows = { version = "0.61", features = ["AI_MachineLearning"] }
# トークナイザ(tokenizer.json をローカル読み込み。http 機能は不要)
tokenizers = { version = "=0.23.1", default-features = false, features = ["fancy-regex"] }
# モデルの手動ダウンロード(hf-hub の代わり。バイナリサイズと依存削減)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

[features]
default = []
# NPU 向け EP は WinML 内部で自動選択されるため、ort の feature 置き換え。
# この feature は後方互換のため残すが、WinML では無効。
npu = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
